fix: update footer link

--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@ Text Domain: Inline AMP
 Version: 1.0
 Requires at least: 5.3
 Requires PHP: 5.2.4
-Description: This theme has traditional two column blog style, and is easy-to-use,friendly-to-admin(all settings goes to theme customizer), we used a lot of modern tech such as flex layer, Pure CSS design. Our theme page was fully support AMP tech, which has much better SEO experience. Hopefully you can enjoy our well-designed product.
+Description: InlineAMP has a traditional two column layer, it's designed for easy-use,friendly-admin, and all settings goes to theme customizer. we used a lot of modern tech such as flex layer, Pure CSS design. Our theme page was fully support AMP tech, which has much better SEO experience.
 Tags: blog, blog-style, two-column, amp, purecss, mobile-friendly, plugin-free, better-seo
 Author: Inline-flex team
-Author URI: https://www.inline-flex.com
-Theme URI: https://www.inline-flex.com/inline-amp/
-License: Commercial license
+Author URI: https://hhacker.com
+Theme URI: https://hhacker.com
+License: gpl-3.0
 */
 
 
