--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Text Domain: Inline AMP
 Version: 1.0
 Requires at least: 5.3
 Requires PHP: 5.2.4
-Description: InlineAMP has a traditional two column layer, it's designed for easy-use,friendly-admin, and all settings goes to theme customizer. we used a lot of modern tech such as flex layer, Pure CSS design. Our theme page was fully support AMP tech, which has much better SEO experience.
+Description: InlineAMP has a traditional two column layout, it's designed for easy-use,friendly-admin, and all settings goes to theme customizer. we used a lot of modern tech such as flex layer, Pure CSS design. Our theme page was fully support AMP tech, which has much better SEO experience.
 Tags: blog, blog-style, two-column, amp, purecss, mobile-friendly, plugin-free, better-seo
 Author: Inline-flex team
 Author URI: https://hhacker.com
