--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 /*
 Theme Name: Inline AMP
-Text Domain: Inline AMP
+Text Domain: InlineAMP
 Version: 1.0
 Requires at least: 5.3
 Requires PHP: 5.2.4
 Description: InlineAMP has a traditional two column layout, it's designed for easy-use,friendly-admin, and all settings goes to theme customizer. we used a lot of modern tech such as flex layer, Pure CSS design. Our theme page was fully support AMP tech, which has much better SEO experience.
-Tags: blog, blog-style, two-column, amp, purecss, mobile-friendly, plugin-free, better-seo
-Author: Inline-flex team
+Tags: blog,two-columns,right-sidebar,sticky-post,theme-options
+Author: Hhacker
 Author URI: https://hhacker.com
-Theme URI: https://hhacker.com
-License: gpl-3.0
+License: GNU General Public License v3 or later
+License URI: https://www.gnu.org/licenses/gpl-3.0.html
 */
 
 
