fix: update text domain

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Inline AMP
-Text Domain: InlineAMP
+Text Domain: inline-amp
 Version: 1.0
 Requires at least: 5.3
 Requires PHP: 5.2.4
