--- a/style-editor.css
+++ b/style-editor.css
@@ -178,6 +178,7 @@ h2.article-title a {
     line-height: 1.9048vw;
     margin-top: 2.0238vw;
     margin-bottom: 2.0238vw;
+    color: #333333;
 }
 
 .content figcaption {
