css: fix for code content

--- a/style-editor.css
+++ b/style-editor.css
@@ -1762,3 +1762,17 @@ amp-social-share.rounded:hover {
         line-height: min(2.9333vw, 11px);
     }
 }
+
+/* fix for code content */
+.content p[class^="amp-wp"] {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 0.4vw 1vw 0.4vw 1vw;
+    line-height: 1;
+}
+
+@media only screen and (max-width: 640px) {
+    .content p[class^="amp-wp"] {
+        padding: 1vw 3vw 1vw 3vw;
+    }
+}
